# rknn_retinaface_demo_video

./: README.md
rknn_retinaface_demo/: CMakeLists.txt  build-linux_RK356X.sh
rknn_retinaface_demo/install/rknn_retinaface_demo_Linux/: rknn_retinaface_demo
rknn_retinaface_demo/model/: RetinaFace.rknn
rknn_retinaface_demo/src/: image_drawing.cc  image_utils.cc  main.cc  retinaface.cc
